# Cruze-contable

./: ARCHITECTURE.md  CLOUDFLARE_SECRETS_SETUP.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
.github/workflows/: cloudflare-pages.yml
agents/go-runtime/: .env.example  README.md  go.mod
agents/linux/: agent-installer.sh  agent-rust-installer.sh  agent.sh  disable-legacy-agents.sh
agents/rust-agent/: Cargo.toml  README.md
agents/rust-agent/src/: actions.rs  api.rs  config.rs  diagnostics.rs  main.rs  models.rs
agents/windows/: agent-installer.ps1  agent-rust-installer.ps1  agent.ps1  disable-legacy-agents.ps1
docs/: AGENT_ACTIONS_CATALOG.md  AGENT_ENROLLMENT.md  ARCHITECTURE.md  GO_RUST_MIGRATION_MAP.md  MULTITENANCY_MODEL.md  PACKAGE_AND_LICENSE_MANAGEMENT.md  SECURITY_HARDENING_REPORT.md  TECHNICAL_AUDIT.md  technical-audit-2026-03-14.md
docs/modules/: README.md
public/: _redirects
scripts/: configure-supabase-signup-rate-limit.mjs
src/: App.tsx  index.css  vite-env.d.ts
src/components/: ProtectedRoute.tsx  RealtimeTaskNotifier.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useCompany.ts  useCompanyAccess.ts  useCorporate.ts
src/lib/: companyScope.ts  deviceQueries.ts  display-maps.ts  roles.ts  scriptExecutions.ts  utils.ts
src/pages/: AcceptInvitation.tsx  Automation.tsx  Backups.tsx  CorporateProvisioning.tsx  Dashboard.tsx  Deliveries.tsx  Devices.tsx  Diagnostics.tsx  EmailProvisioning.tsx  EmployeePortal.tsx  FirewallManager.tsx  Inventory.tsx  KnowledgeBase.tsx  (+10 more)
supabase/: config.toml
(+85 files in other folders)
